--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: black
 }
 /* START: General styles */
 .max-width {
@@ -31,6 +31,28 @@ body {
 .custom-btn {
   @apply flex flex-row relative justify-center items-center py-3 px-6 outline-none font-bold text-xl;
 }
+/* END: General styles */
+/* START: Hero styles */
+.hero {
+  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto;
+}
+
+.hero__title {
+  @apply 2xl:text-[72px] text-white sm:text-[64px] text-[50px] font-extrabold;
+}
+
+.hero__subtitle {
+  @apply text-[27px] text-white font-light mt-5;
+}
+
+.hero__image-container {
+  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+}
+
+.hero__image {
+  @apply relative xl:w-full w-[90%] xl:h-full h-[590px] z-0;
+}
+/* END: Hero styles */
 .nav{
   background: rgba(28, 28, 28, 0.488);
   border-radius: 1px;
