--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900&family=Questrial&family=VT323&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -6,6 +7,7 @@
 
 body {
   background: black;
+  font-family: 'Questrial', sans-serif;
 }
 /* START: General styles */
 .max-width {
@@ -87,12 +89,12 @@ body {
   }
 }
 .gradient {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   --size: 600px;
   --speed: 20s;
   --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: var(--size);
   height: var(--size);
   filter: blur(calc(var(--size) / 5));
