--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
 @tailwind utilities;
 
 body {
-  background: radial-gradient(circle at top, #000000 85%, #ffffff 15%);
+  background: black;
+  /* background: radial-gradient(circle at top, #000000 85%, #393939 15%); */
   font-family: 'Questrial', sans-serif;
 }
 /* START: General styles */
@@ -79,6 +80,16 @@ body {
 .white-gradient {
   background: rgba(85, 85, 85, 0.4);
   filter: blur(900px);
+}
+.feedback-slider {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+}
+
+.feedback-card {
+  scroll-snap-align: start;
+  flex-shrink: 0;
 }
 @keyframes rotate {
   0% {
