--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 body {
-  background: black;
+  background: rgb(0, 0, 0);
   font-family: 'Questrial', sans-serif;
 }
 /* START: General styles */
