--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,14 @@ body {
   @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4 gap-10;
 }
 /* END: Footer styles */
+.sidebar{
+  background: rgba(174, 174, 174, 0.2);
+  border-radius: 20px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
 .nav{
   background: rgba(28, 28, 28, 0.488);
   border-radius: 1px;
