--- a/app/globals.css
+++ b/app/globals.css
@@ -108,6 +108,7 @@ body {
   display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
 }
 .feedback-card {
   scroll-snap-align: start;
@@ -136,6 +137,19 @@ body {
 .unlimited-accounts-container:hover {
   box-shadow: rgba(128, 128, 255, 0.52) 0px 30px 60px -12px inset, rgba(62, 43, 97, 0.6)0px 18px 36px -18px inset;
   border: 0.6px solid #5e58ff7d;
+}
+.pink-gradient {
+  background: linear-gradient(90deg, #e0c4f4 0%, #5d58ff 100%);
+  filter: blur(900px);
+}
+.blue-gradient {
+  background: #7EC9FF;
+  filter: blur(750px);
+}
+.purple-gradient{
+  background: #262559;
+  filter: blur(800px);
+  z-index: 0;
 }
 .gradient {
   --size: 600px;
