--- a/app/globals.css
+++ b/app/globals.css
@@ -161,6 +161,9 @@ body {
   filter: blur(800px);
   z-index: 0;
 }
+.campaign-cards {
+  animation: fadeOut 10s ease-in-out infinite;
+}
 .gradient {
   --size: 600px;
   --speed: 20s;
@@ -184,6 +187,16 @@ body {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes fadeOut {
+  0%, 100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-20px);
   }
 }
 @media (max-width: 640px) {
