--- a/app/globals.css
+++ b/app/globals.css
@@ -107,6 +107,11 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.text-gradient-right{
+  background: linear-gradient(to right, #00eeff 0%, #5d58ff 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
 .bg-gradient{
   background-color: #3D3D3D;
 }
@@ -119,6 +124,11 @@ body {
 .feedback-card {
   scroll-snap-align: start;
   flex-shrink: 0;
+}
+.recruiters-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; 
 }
 .user-ratings {
   display: flex;
@@ -162,7 +172,7 @@ body {
   z-index: 0;
 }
 .campaign-cards {
-  animation: fadeOut 10s ease-in-out infinite;
+  animation: fadeOut 10s ease-in-out;
 }
 .gradient {
   --size: 600px;
