--- a/app/globals.css
+++ b/app/globals.css
@@ -241,6 +241,9 @@ body {
   .flex-container{
     flex-direction: column;
   }
+  .gradient{
+    left: -48%;
+  }
 }
 /* iPad Mini and larger */
 @media (min-width: 768px) and (max-width: 1024px){
